--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ organization:
   location1: "3 Lane 699, Huafa Road, Xuhui District"
   location2: "Building 2X, No. 2005 Songhu Road, Yangpu District"
   city: "Shanghai, China"
+  email: "xpqiu@fudan.edu.cn"
   
 
 # Social links
